[package]
name = "nlmrs"
version = "0.1.5"
edition = "2021"
description= "A Rust crate for building Neutral Landscape Models."
repository = "https://github.com/tom-draper/nlmrs"
license = "MIT"
keywords = ["landscape", "ecology", "nlm", "neutral", "spatial"]
categories = ["mathematics", "graphics", "simulation", "multimedia::images", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/nlm.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[dev-dependencies]
rstest = "0.16.0"

[dependencies]
rand = "0.8.5"
csv = "1.1.6"