[package]
name = "nlmrs"
version = "0.2.0"
edition = "2021"
description= "A Rust crate for building Neutral Landscape Models."
repository = "https://github.com/tom-draper/nlmrs"
license = "MIT"
keywords = ["landscape", "ecology", "nlm", "neutral", "spatial"]
categories = ["mathematics", "graphics", "simulation", "multimedia::images", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nlmrs"
path = "src/main.rs"

[dev-dependencies]
rstest = "0.16.0"

[dependencies]
rand = "0.8.5"
csv = "1.1.6"
serde_json = "1.0"
image = "0.25"
noise = "0.9"
rayon = "1"
clap = { version = "4", features = ["derive"] }
