[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "nlmrs"
description = "A high-performance library for building Neutral Landscape Models"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = { text = "MIT" }
keywords = ["landscape", "ecology", "nlm", "spatial", "terrain", "procedural"]
authors = [{ name = "Tom Draper", email = "tomjdraper1@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/tom-draper/nlmrs"
Repository = "https://github.com/tom-draper/nlmrs"
Issues = "https://github.com/tom-draper/nlmrs/issues"

[tool.maturin]
# Rust feature to enable when building the Python extension.
features = ["python"]
# The compiled module name imported in Python: import nlmrs
module-name = "nlmrs"
