[package]
name = "nlmrs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# default-features = false disables the "parallel" feature (rayon), which
# doesn't compile for wasm32-unknown-unknown.
nlmrs       = { path = "../../", default-features = false }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
